--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         
         <div class="contact-info">
             <p>Ready to bring your vision to life?</p>
-            <a href="mailto:hello@caspiancode.com" class="email">hello@caspiancode.com</a>
+            <a href="mailto:contact@caspiancode.com" class="email">contact@caspiancode.com</a>
         </div>
     </div>
 </body>
