--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <h1 class="company-name">CaspianCode</h1>
         
         <p class="tagline">
-            Crafting innovative digital solutions with cutting-edge technology and modern development practices
+            Code, design, and marketing for growth.
         </p>
         
         <!-- Added founders information -->
