Updated minor mistakes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CaspianCode - Gənc İstedadları Gücləndirən IT Şirkəti</title>
+    <title>CaspianCode - İnnovativ İT Şirkəti</title>
     <style>
         * {
             margin: 0;
@@ -396,7 +396,7 @@
             <div class="container">
                 <h1>CaspianCode</h1>
                 <p class="mission">
-                    Gənc istedadları gücləndirərək keyfiyyətli və yaradıcı IT həlləri təqdim etmək.
+                    Gənc istedadlı kadrla İT sahəsində innovativ yeniliklərə imza atırıq.
                 </p>
             </div>
         </section>
@@ -409,14 +409,14 @@
                         <h2>Haqqımızda</h2>
                         <p>
                             CaspianCode yeni başlayan gənclər üçün nəzərdə tutulmuş IT şirkətidir. 
-                            Biz yeniyetmələrin texnologiya sahəsində təcrübə qazanmalarına və 
-                            komissiya qazanmalarına kömək edirik. Məqsədimiz gənc istedadları 
+                            Biz gənclərin texnologiya sahəsində təcrübə və gördükləri işin nəticəsi
+                            olaraq əməkhaqqı qazanmalarına kömək edirik. Məqsədimiz gənc istedadları 
                             dəstəkləyərək onların peşəkar inkişafına töhfə verməkdir.
                         </p>
                     </div>
                     <div class="founders">
                         <h3>Təsisçilər</h3>
-                        <div class="founder-name">Mahammad Taghizade</div>
+                        <div class="founder-name">Mahammad Tagizade</div>
                         <div class="founder-name">Ughur Abdullayev</div>
                     </div>
                 </div>
@@ -479,7 +479,7 @@
         <section class="cta">
             <div class="container">
                 <h2>Bizimlə İşləməyə Hazırsınız?</h2>
-                <p>Gənc istedadlarla birlikdə innovativ IT həlləri yaradaq</p>
+                <p>O zaman bizimlə əlaqə saxlayın</p>
                 <a href="#contact" class="cta-button">Bizimlə Əlaqə</a>
             </div>
         </section>
@@ -488,7 +488,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 CaspianCode. Bütün hüquqlar qorunur.</p>
+            <p>&copy; 2025 CaspianCode. Bütün hüquqlar qorunur.</p>
         </div>
     </footer>
 </body>
