--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         <!-- Services Section -->
         <section class="services">
             <div class="container">
-                <h2>Biznes Həllərimiz</h2>
+                <h2>Gördüyümüz İşlər</h2>
                 <div class="services-container">
                     <div class="services-flow">
                         <div class="service-card">
