--- a/index.html
+++ b/index.html
@@ -475,12 +475,12 @@
             </div>
         </section>
 
-        <!-- CTA Section -->
+    <!-- CTA Section -->
         <section class="cta">
             <div class="container">
                 <h2>Bizimlə İşləməyə Hazırsınız?</h2>
-                <p>O zaman bizimlə əlaqə saxlayın</p>
-                <a href="#contact" class="cta-button">Bizimlə Əlaqə</a>
+                <p>Gənc istedadlarla birlikdə innovativ IT həlləri yaradaq</p>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@caspiancode.com" target="_blank" class="cta-button">Bizimlə Əlaqə</a>
             </div>
         </section>
     </main>
